fix(FEV-1198): increased line-height to avoid scrollbars

--- a/src/components/quiz-question/multi-choice/multi-choice.scss
+++ b/src/components/quiz-question/multi-choice/multi-choice.scss
@@ -9,6 +9,7 @@
   .questionText {
     @include ivq-text;
     flex-shrink: 0;
+    line-height: 21px;
     overflow-wrap: break-word;
     font-weight: bold;
     overflow: initial;
