--- a/src/components/quiz-question/reflection-point/reflection-point.scss
+++ b/src/components/quiz-question/reflection-point/reflection-point.scss
@@ -11,5 +11,6 @@
     flex-shrink: 0;
     overflow-wrap: break-word;
     font-size: 16px;
+    line-height: 21px;
   }
 }
