--- a/src/components/quiz-review/question-review/question-review.scss
+++ b/src/components/quiz-review/question-review/question-review.scss
@@ -46,6 +46,7 @@
       flex-shrink: 0;
       overflow-wrap: break-word;
       font-weight: bold;
+      line-height: 21px;
       margin-bottom: 4px;
     }
     .correctAnswerIs {
